# yaaos

./: .dockerignore  .env.sample  .gitignore  .mcp.json  .npmrc  .semgrepignore  .tool-versions  CLAUDE.md  README.md  fly.production.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/backend/: .semgrepignore  Dockerfile  alembic.ini  conftest.py  distributed_correctness_audit.json  pyproject.toml  tach.toml
apps/backend/.semgrep/: dispatch_helper_discipline.yaml  no_bind_call_outside_composition_root.yaml  no_dynamic_attr_access.yaml  no_optional_session.yaml  no_test_only_imports_outside_tests.yaml  uuid_pk_discipline.yaml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_baseline.py  16c46c01359d_drop_schema_migrations_ix_tickets_.py  1d10cefb4001_add_pipelines_findings_artifacts_repos_.py  4f56895a1125_enforce_uuidv7_pk_on_agent_commands_.py  5ea87cddfb6c_add_missing_reviews_columns.py  660f6544dbe7_drop_old_engine_and_reviewer_tables.py  71e9f0d26017_drop_claude_code_repos.py  9c1a2b3d4e5f_rename_run_id_correlation_columns.py  a1b2c3d4e5f6_add_lifecycle_column_to_workspace_agents.py  a2b3c4d5e6f0_add_ticket_attachments.py  a2b3c4d5e6f7_add_user_oauth_tables.py  a3b4c5d6e7f8_add_run_attribution_columns.py  b3c4d5e6f7a8_add_workflow_execution_typed_columns.py  b4c5d6e7f8a9_add_last_polled_at_to_device_sessions.py  b5c6d7e8f9a0_add_artifact_adoption_provenance.py  c4dd2164033f_drop_reviews_run_id_and_tighten_token_columns.py  c6d7e8f9a0b1_add_mcp_server_tables.py  d5e6f7a8b9c0_add_workspace_max_count_to_orgs.py  e1f2a3b4c5d6_rename_byok_keys_to_org_api_keys.py  f2a3b4c5d6e7_scrub_config_update_api_keys.py
apps/backend/app/: main.py  web.py  worker.py
apps/backend/app/core/: constants.py  plugin_meta.py  shutdown_registry.py
apps/backend/app/core/agent_gateway/: __init__.py  api_key_provider.py  bearers.py  byok_provider.py  hydrators.py  lifecycle_hooks.py  models.py  module.py  org_arn_lookup.py  rate_limit.py  report_sink.py  run_sink.py  service.py  sts_verifier.py  subscribers.py  types.py  web.py
apps/backend/app/core/api_keys/: __init__.py  models.py  module.py  service.py  web.py
apps/backend/app/core/audit_log/: __init__.py  actor.py  models.py  service.py
apps/backend/app/core/auth/: __init__.py  cloudflare.py  context.py  cookies.py  middleware.py  module.py  rate_limit.py  role_policy.py  types.py
apps/backend/app/core/byok/: __init__.py  models.py  module.py  service.py
apps/backend/app/core/coding_agent/: __init__.py  api_keys.py  byok.py  commands_base.py  installs.py  installs_web.py  invocation.py  models.py  module.py  partition_maintenance.py  prompts.py  run_service.py  run_sink_impl.py  service.py  skills_bundle.py  types.py
apps/backend/app/core/config/: __init__.py  module.py  service.py
apps/backend/app/core/database/: __init__.py  module.py  service.py
apps/backend/app/core/events/: __init__.py  service.py  web.py
apps/backend/app/core/identity/: __init__.py  models.py  module.py  providers.py  repository.py  scheduler.py  service.py  session_dependency.py  sessions.py  totp.py  types.py  user_web.py  web.py
apps/backend/app/core/intake/: __init__.py  module.py  parsing.py  registry.py  service.py  web.py
apps/backend/app/core/llm/: __init__.py  braintrust_evals.py  exceptions.py  file_prompt.py  gateway.py  module.py  prompt_runnable.py
apps/backend/app/core/notifications/: __init__.py  models.py  module.py  service.py  tasks.py  web.py
apps/backend/app/core/oauth/: __init__.py  models.py  module.py  service.py  user_connections.py  user_web.py
apps/backend/app/core/observability/: __init__.py  _samplers.py  module.py  service.py  spawn.py  traceparent.py
apps/backend/app/core/outbox/: __init__.py  models.py  module.py  service.py
apps/backend/app/core/plugin_kit/: __init__.py  service.py
apps/backend/app/core/primitives/: __init__.py  service.py
apps/backend/app/core/redis/: __init__.py  hash_ops.py  pubsub.py  service.py  set_if_absent.py  set_ops.py  shutdown.py  sliding_window.py  zset_ops.py
apps/backend/app/core/saml/: __init__.py  module.py  service.py
apps/backend/app/core/secrets/: __init__.py  module.py  service.py
apps/backend/app/core/sessions/: __init__.py  dependencies.py  module.py  web.py
apps/backend/app/core/sse/: __init__.py  service.py  web.py
apps/backend/app/core/sse_pubsub/: __init__.py  module.py  service.py
apps/backend/app/core/tasks/: __init__.py  broker.py  cron.py  drain.py  metrics.py  middleware.py  models.py  module.py  runtime.py  scheduled_runs_prune.py  scheduler.py  service.py  spans.py  types.py  worker.py  worker_health.py
apps/backend/app/core/tenancy/: __init__.py  models.py  module.py  repository.py  service.py
apps/backend/app/core/vcs/: __init__.py  module.py  registry.py  types.py
apps/backend/app/core/webserver/: __init__.py  app_factory.py  csp.py  health.py  module.py  openapi_artifact.py  registry.py  service.py  (+1 more)
apps/backend/app/testing/: fake_coding_agent.py  isolation.py  rate_limit_reset.py  seed.py  service_test_setup.py  workflow_harness.py
apps/backend/docs/: README.md  architecture.md  core_agent_gateway.md  core_api_keys.md  core_audit_log.md  core_auth.md  core_byok.md  core_coding_agent.md  core_config.md  core_database.md  core_events.md  core_identity.md  core_intake.md  core_llm.md  core_notifications.md  core_oauth.md  core_observability.md  core_outbox.md  core_plugin_kit.md  core_plugin_meta.md  core_primitives.md  core_redis.md  core_saml.md  core_secrets.md  core_sessions.md  core_sse.md  core_sse_pubsub.md  core_tasks.md  core_tenancy.md  core_vcs.md  core_webserver.md  core_workflow.md  core_workspace.md  domain_actions.md  domain_artifacts.md  domain_attachments.md  domain_auth.md  domain_coding_agent.md  domain_findings.md  domain_identity.md  (+35 more)
apps/backend/openapi/: agent-api.yaml  web-api.json
apps/fake-oauth-provider/: Dockerfile  pyproject.toml
apps/fake-oauth-provider/app/: main.py
apps/fake-openai/: Dockerfile  pyproject.toml
apps/fake-openai/app/: main.py
(+1400 files in other folders)
