[project]
name = "yaaos-backend"
version = "0.0.1"
description = "yaaos backend — FastAPI + SQLAlchemy"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "cryptography>=43",
    "pyjwt>=2.9",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "httpx>=0.27",
    # core/llm — direct LLM calls with structured output. Used today only by the
    # reviewer's reply classifier; coding_agent plugins shell out to a CLI and
    # don't pull this in. langchain-community ships SQLiteCache for test replay.
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.33",
    "httpx>=0.27",
    "ruff>=0.7",
    "tach>=0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
# `app/testing/` is the test-scaffolding layer (stubs, future recorders).
# Excluded from wheel builds so production distributions physically cannot
# enable stub mode — the conditional import in app/main.py fails loud.
# The Docker image still copies everything via apps/backend/; a separate
# Dockerfile stage or .dockerignore is the right tool for image-level
# exclusion (out of scope for this change).
exclude = ["app/testing", "app/testing/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app"]
python_files = ["test_*.py"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint]
extend-select = ["TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest.mock.patch" = { msg = "Use dependency injection, not @patch. See plan/milestones/M01-code-review/patterns.md § DI over @patch." }
"unittest.mock.patch.object" = { msg = "Use dependency injection, not @patch." }
"unittest.mock.patch.multiple" = { msg = "Use dependency injection, not @patch." }
"mock.patch" = { msg = "Use dependency injection, not @patch." }
