[project]
name = "yaaos-backend"
version = "0.0.1"
description = "yaaos backend — FastAPI + SQLAlchemy"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "cryptography>=43",
    "pyjwt>=2.9",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "httpx>=0.27",
    # core/llm — direct LLM calls with structured output. Used today only by the
    # reviewer's reply classifier; coding_agent plugins shell out to a CLI and
    # don't pull this in. Test replay uses LLMTestCache (file-colocated JSON
    # checked into git), not langchain-community's SQLiteCache.
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    # Eval helper in core/llm wraps braintrust.Eval + braintrust-langchain's
    # callback handler; both deps are lazy-imported by core/llm/braintrust_evals.py
    # so non-eval callers don't pay for them.
    "braintrust>=0.4",
    "braintrust-langchain>=0.1",
    # M02 — auth stack.
    # authlib: OAuth/OIDC client used by plugins/oauth_github.
    # python3-saml: SAML 2.0 (SP-initiated only) — requires libxmlsec1-dev
    # + xmlsec1 system packages, installed in apps/backend/Dockerfile.
    # itsdangerous: signed invitation tokens + GitHub install state.
    # pyotp: TOTP fallback for 2FA.
    # slowapi: rate limiting on /api/auth/* + mutating endpoints.
    "authlib>=1.3",
    "python3-saml>=1.16",
    "itsdangerous>=2.2",
    "pyotp>=2.9",
    "slowapi>=0.1.9",
    # M05 — Redis pub/sub backs core/sse_pubsub fanout; the same client is
    # reused by core/tasks Phase 1's taskiq broker.
    "redis>=5.0",
    # core/tasks Phase 1 — taskiq broker (Redis Streams) + result backend.
    "taskiq>=0.11",
    "taskiq-redis>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.33",
    "pytest-reportlog>=0.4",
    "httpx>=0.27",
    "ruff>=0.7",
    "tach>=0.16",
    # Semgrep — static security analysis across Python + TypeScript/React.
    # Runs in both apps/backend/bin/ci and apps/web/bin/ci against the
    # repo-root `.semgrep.yml` ruleset.
    "semgrep>=1.95",
]

[project.entry-points."pytest11"]
yaaos_llm_cache = "app.core.llm.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
# `app/testing/` is the test-scaffolding layer (stubs, future recorders).
# Excluded from wheel builds so production distributions physically cannot
# enable stub mode — the conditional import in app/main.py fails loud.
# The Docker image still copies everything via apps/backend/; a separate
# Dockerfile stage or .dockerignore is the right tool for image-level
# exclusion (out of scope for this change).
exclude = ["app/testing", "app/testing/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app"]
python_files = ["test_*.py"]
markers = [
    # Cross-module flow tests that drive a backend entry-point (function or
    # HTTP route via ASGITransport) against real Postgres + stub plugins.
    # Use `pytest -m service` to run only the service tier;
    # `pytest -m "not service"` for the fast unit-only loop.
    # See apps/backend/docs/patterns.md § Testing → Service tests.
    "service: cross-module backend flow test (real DB, stub plugins)",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint]
extend-select = ["TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest.mock.patch" = { msg = "Use dependency injection, not @patch. See plan/milestones/M01-code-review/patterns.md § DI over @patch." }
"unittest.mock.patch.object" = { msg = "Use dependency injection, not @patch." }
"unittest.mock.patch.multiple" = { msg = "Use dependency injection, not @patch." }
"mock.patch" = { msg = "Use dependency injection, not @patch." }
