[project]
name = "yaaos-fake-oauth-provider"
version = "0.0.1"
description = "Test-only fake RFC-8628 device-auth OAuth provider for yaaos e2e tests"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pyjwt>=2.9",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
