[project]
name = "yaaos-fake-openai"
version = "0.0.1"
description = "Test-only fake OpenAI Auth service for yaaos e2e tests"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pyjwt>=2.9",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
